--- a/src/tests/benchmark/CMakeLists.txt
+++ b/src/tests/benchmark/CMakeLists.txt
@@ -13,7 +13,7 @@ macro(add_benchmark benchmarkName)
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
     FIND_PACKAGE(Boost)
     include_directories(${Boost_INCLUDE_DIR})
-    target_link_libraries(${testbinary} idyntree-modelio-urdf-kdl idyntree-core idyntree-kdl idyntree-model idyntree-testmodels)
+    target_link_libraries(${testbinary} idyntree-modelio-urdf idyntree-modelio-urdf-kdl idyntree-core idyntree-kdl idyntree-model idyntree-testmodels)
 endmacro()
 
 add_benchmark(Dynamics)
