--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -24,20 +24,23 @@ if(IDYNTREE_USES_IRRLICHT)
     idyntree_add_tool(idyntree-model-view idyntree-model-view.cpp)
 endif()
 
-if(IDYNTREE_USES_ICUB_MAIN)
-  add_definitions(-D_USE_MATH_DEFINES)
-  add_executable(urdf2dh urdf2dh)
-  target_link_libraries(urdf2dh iKin idyntree-core idyntree-model idyntree-icub idyntree-high-level)
-  install(TARGETS urdf2dh DESTINATION bin)
-endif()
+if(IDYNTREE_COMPILES_YARP_TOOLS)
+  message(WARNING "The IDYNTREE_COMPILES_YARP_TOOLS option is deprecated and will be removed in iDynTree 5. Please use https://github.com/robotology/idyntree-yarp-tools instead.")
+  if(IDYNTREE_USES_ICUB_MAIN)
+    add_definitions(-D_USE_MATH_DEFINES)
+    add_executable(urdf2dh urdf2dh)
+    target_link_libraries(urdf2dh iKin idyntree-core idyntree-model idyntree-icub idyntree-high-level)
+    install(TARGETS urdf2dh DESTINATION bin)
+  endif()
 
-if (IDYNTREE_USES_YARP AND IDYNTREE_USES_QT5 AND IDYNTREE_USES_ICUB_MAIN)
-    if (IDYNTREE_BUILD_IK)
-        add_subdirectory(idyntree-sole-gui)
+  if(IDYNTREE_USES_YARP AND IDYNTREE_USES_QT5 AND IDYNTREE_USES_ICUB_MAIN)
+    if(IDYNTREE_BUILD_IK)
+      add_subdirectory(idyntree-sole-gui)
     endif()
     add_subdirectory(plotter)
-endif()
+  endif()
 
-if (IDYNTREE_USES_YARP)
+  if(IDYNTREE_USES_YARP)
     add_subdirectory(yarprobotstatepublisher)
-endif ()
+  endif()
+endif()
