--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -13,6 +13,10 @@ if(IDYNTREE_BINDINGS_BUILD_STANDALONE)
   list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
   find_package(iDynTree REQUIRED)
   set(IDYNTREE_LIBRARIES ${iDynTree_LIBRARIES})
+  # Set variables that are set in extern
+  get_filename_component(PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
+  set(IDYNTREE_INTERNAL_MOXUNIT_PATH "${PARENT_DIR}/extern/MOxUnit/MOxUnit")
+  set(IDYNTREE_INTERNAL_MESH2TRI_PATH "${PARENT_DIR}/extern/mesh2tri")
 else()
   get_property(IDYNTREE_LIBRARIES GLOBAL PROPERTY ${VARS_PREFIX}_TARGETS)
 endif()
