Enable the installation of the MeshCat visualizer class

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -139,7 +139,7 @@ if (IDYNTREE_USES_PYTHON_PYBIND11 OR IDYNTREE_USES_PYTHON)
     endif()
     # If SWIG is enabled, add the corresponding import.
     if (${IDYNTREE_USES_PYTHON})
-        file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/__init__.py" "from . import swig${NEW_LINE}")
+        file(APPEND "${CMAKE_CURRENT_BINARY_DIR}/__init__.py" "from . import swig${NEW_LINE}from . import visualize${NEW_LINE}")
         # Create also an alias from swig to the old `bindings` import.
         file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/bindings.py" "from .swig import *${NEW_LINE}")
         install(FILES "${CMAKE_CURRENT_BINARY_DIR}/bindings.py"
