--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm", "ninja", "cmake>=3.16", "numpy", "cmake-build-extension"]
 build-backend = "setuptools.build_meta"
+requires = [
+    "wheel",
+    "setuptools>=45",
+    "setuptools_scm[toml]>=6.0",
+    "numpy",
+    "cmake-build-extension>=0.4",
+]
+
+[tool.setuptools_scm]
+local_scheme = "dirty-tag"
+
+[tool.cibuildwheel]
+build-frontend = "build"
