--- a/setup.cfg
+++ b/setup.cfg
@@ -46,3 +46,7 @@ zip_safe = False
 python_requires = >=3.6
 install_requires =
     numpy
+
+[options.entry_points]
+console_scripts =
+    idyntree-model-info = idyntree.bin.__main__:main
