--- a/src/model_io/codecs/CMakeLists.txt
+++ b/src/model_io/codecs/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2015 Fondazione Istituto Italiano di Tecnologia
+# Copyright (C) 2021 Fondazione Istituto Italiano di Tecnologia
 #
 # Licensed under either the GNU Lesser General Public License v3.0 :
 # https://www.gnu.org/licenses/lgpl-3.0.html
@@ -6,14 +6,12 @@
 # https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html
 # at your option.
 
-project(iDynTree_ModelIO_URDF CXX)
-
-set(IDYNTREE_MODELIO_URDF_HEADERS include/iDynTree/ModelIO/URDFDofsImport.h
+set(IDYNTREE_MODELIO_HEADERS include/iDynTree/ModelIO/URDFDofsImport.h
                                   include/iDynTree/ModelIO/ModelLoader.h
                                   include/iDynTree/ModelIO/ModelExporter.h
                                   include/iDynTree/ModelIO/ModelCalibrationHelper.h)
 
-set(IDYNTREE_MODELIO_URDF_PRIVATE_HEADERS include/private/URDFDocument.h
+set(IDYNTREE_MODELIO_PRIVATE_HEADERS include/private/URDFDocument.h
                                           include/private/InertialElement.h
                                           include/private/JointElement.h
                                           include/private/LinkElement.h
@@ -39,23 +37,17 @@ set(IDYNTREE_MODELIO_URDF_XMLELEMENTS_SOURCES src/URDFDocument.cpp
                                               src/VisualElement.cpp
                                               src/GeometryElement.cpp)
 
-set(IDYNTREE_MODELIO_URDF_SOURCES src/URDFDofsImport.cpp
+set(IDYNTREE_MODELIO_SOURCES src/URDFDofsImport.cpp
                                   src/ModelLoader.cpp
                                   src/ModelExporter.cpp
                                   src/ModelCalibrationHelper.cpp
                                   src/URDFModelExport.cpp)
 
-SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODELIO_URDF_SOURCES})
-SOURCE_GROUP("Source Files\\XML Elements" FILES ${IDYNTREE_MODELIO_URDF_XMLELEMENTS_SOURCES})
-SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODELIO_URDF_HEADERS})
-SOURCE_GROUP("Private Header Files" FILES ${IDYNTREE_MODELIO_URDF_PRIVATE_HEADERS})
+list(APPEND IDYNTREE_MODELIO_SOURCES ${IDYNTREE_MODELIO_URDF_XMLELEMENTS_SOURCES})
 
-list(APPEND IDYNTREE_MODELIO_URDF_SOURCES ${IDYNTREE_MODELIO_URDF_XMLELEMENTS_SOURCES})
+set(libraryname idyntree-modelio)
 
-# share headers with all iDynTree targets
-set(libraryname idyntree-modelio-urdf)
-
-add_library(${libraryname} ${IDYNTREE_MODELIO_URDF_SOURCES} ${IDYNTREE_MODELIO_URDF_HEADERS} ${IDYNTREE_MODELIO_URDF_PRIVATE_HEADERS} $<TARGET_OBJECTS:idyntree-private-fpconv>)
+add_library(${libraryname} ${IDYNTREE_MODELIO_SOURCES} ${IDYNTREE_MODELIO_HEADERS} ${IDYNTREE_MODELIO_PRIVATE_HEADERS} $<TARGET_OBJECTS:idyntree-private-fpconv>)
 add_library(iDynTree::${libraryname} ALIAS ${libraryname})
 
 target_compile_features(${libraryname} PRIVATE cxx_auto_type cxx_delegating_constructors cxx_final cxx_lambdas cxx_lambda_init_captures)
@@ -72,7 +64,7 @@ target_include_directories(${libraryname} PRIVATE $<TARGET_PROPERTY:idyntree-pri
 
 target_compile_options(${libraryname} PRIVATE ${IDYNTREE_WARNING_FLAGS})
 
-set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_URDF_HEADERS})
+set_property(TARGET ${libraryname} PROPERTY PUBLIC_HEADER ${IDYNTREE_MODELIO_HEADERS})
 
 install(TARGETS ${libraryname}
         EXPORT iDynTree
