Add ModelTransformsSolidShapes header in idyntree-solid-shapes library
At the moment, this header contains just the approximateSolidShapesWithPrimitiveShape
function, useful to approximate the solid shapes of a given iDynTree::Model to a series
of bounding boxes.

--- a/src/solid-shapes/CMakeLists.txt
+++ b/src/solid-shapes/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(libraryname idyntree-solid-shapes)
 
-set(IDYNTREE_SOLID_SHAPES_SOURCES src/InertialParametersSolidShapesHelpers.cpp)
-set(IDYNTREE_SOLID_SHAPES_HEADERS include/iDynTree/InertialParametersSolidShapesHelpers.h)
+set(IDYNTREE_SOLID_SHAPES_SOURCES src/InertialParametersSolidShapesHelpers.cpp
+                                  src/ModelTransformersSolidShapes.cpp)
+set(IDYNTREE_SOLID_SHAPES_HEADERS include/iDynTree/InertialParametersSolidShapesHelpers.h
+                                  include/iDynTree/ModelTransformersSolidShapes.h)
 
 add_library(${libraryname} ${IDYNTREE_SOLID_SHAPES_HEADERS} ${IDYNTREE_SOLID_SHAPES_SOURCES})
 add_library(iDynTree::${libraryname} ALIAS ${libraryname})
